--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<span style="color: transparent; background-color: black;">QWxmYXogSW5mb3NlYw==</span>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Page Finder</title>
     <style>
         body {
-            background-color: #000000;
-            color: #00FF00;
-            font-family: 'Courier New', Courier, monospace;
+            background-color: #000000; /* Dark background */
+            color: #00FF00; /* Neon green text */
+            font-family: 'Courier New', Courier, monospace; /* Code-like font */
             text-align: center;
             padding: 20px;
         }
@@ -18,38 +17,38 @@
             border-collapse: collapse;
             width: 70%;
             margin: 20px auto;
-            box-shadow: 0 0 20px #00FF00, 0 0 10px #00FF00;
+            box-shadow: 0 0 20px #00FF00, 0 0 10px #00FF00; /* Neon green glow */
         }
 
         th, td {
-            border: 1px solid #00FF00;
+            border: 1px solid #00FF00; /* Neon green border */
             padding: 10px;
             color: #00FF00;
         }
 
         th {
-            background-color: #003300;
+            background-color: #003300; /* Dark green header */
             font-size: 20px;
         }
 
         td {
-            background-color: #001a00;
+            background-color: #001a00; /* Darker green for rows */
             font-size: 18px;
         }
 
         tr:hover {
-            background-color: #003300;
+            background-color: #003300; /* Hover effect for rows */
         }
 
         input[type="text"], input[type="submit"] {
-            background-color: #001a00;
-            color: #00FF00;
+            background-color: #001a00; /* Input background */
+            color: #00FF00; /* Input text color */
             border: 2px solid #00FF00;
             padding: 10px;
             margin: 10px;
             border-radius: 5px;
             width: 80%;
-            box-shadow: 0 0 10px #00FF00, 0 0 5px #00FF00;
+            box-shadow: 0 0 10px #00FF00, 0 0 5px #00FF00; /* Neon glow */
         }
 
         input[type="submit"] {
@@ -58,39 +57,40 @@
         }
 
         input[type="submit"]:hover {
-            background-color: #003300;
-            box-shadow: 0 0 20px #00FF00, 0 0 10px #00FF00;
+            background-color: #003300; /* Hover effect for button */
+            box-shadow: 0 0 20px #00FF00, 0 0 10px #00FF00; /* Stronger glow */
+        }
+
+        .spinner {
+            display: none;
+            margin-left: 10px;
         }
 
         h1 {
-            color: #00FF00;
+            color: #00FF00; /* Neon green for title */
             text-shadow: 0 0 10px #00FF00;
             font-size: 40px;
             margin-bottom: 20px;
         }
 
         h2 {
-            color: #FF0000;
+            color: #FF0000; /* Red color for developer name */
             font-size: 25px;
             font-family: 'Comic Sans MS', cursive;
         }
 
-        ul {
-            list-style-type: none;
-            padding: 0;
+        small {
+            color: #FFFFFF; /* White color for example text */
+            display: block;
+            margin: 20px 0;
         }
 
-        li {
-            margin: 5px 0;
-            color: #00FF00;
+        a {
+            color: #FFA500; /* Orange for Subscribe button */
+            font-size: 18px;
         }
 
-        li a {
-            color: #00FF00;
-            text-decoration: none;
-        }
-
-        li a:hover {
+        a:hover {
             text-decoration: underline;
         }
     </style>
@@ -100,144 +100,22 @@
     <h1>Admin Page Finder</h1>
     <h2>Developed By: <span>Alfaz</span></h2>
 
-    <form method="POST">
+    <form id="admin_finder_form" name="admin_finder" action="admin_finder.php" method="POST" onsubmit="showSpinner()">
         <label for="base_url">Enter URL Here:</label><br>
-        <input type="text" id="base_url" name="base_url" placeholder="Exampl:https://www.example.com/admin/">
+        <input type="text" id="base_url" name="base_url" placeholder="Enter URL Here ...">
+        <img src="https://www.top4top.io/images/loading.gif" class="spinner" id="spinner" width="30" height="30" alt="Loading...">
         <br>
         <input type="submit" name="go" value="Search">
     </form>
 
-    <?php 
-    if (isset($_POST['base_url'])) {
-        $base_url = $_POST['base_url'];
+    <small>Example: https://www.example.com/admin/</small>
+    <a href="https://youtube.com/@alfazinfosec" target="_blank">SUBSCRIBE Alfaz InfoSec</a>
 
-        // Common admin page paths to check
-        $admin_pages = array(
-            'admin/',
-            'admin/index.php',
-            'admin/login.php',
-            'admin/dashboard.php',
-              'addproduct.php',
-            'user.php',
-            'addpage.php',
-            'add.php',
-            'new.php',
-            'about.php',
-            'gallery.php',
-            'adminuser.php',
-            'image.php',
-            'news.php',
-            'productadd.php',
-            'addadmin.php',
-            'admin.php',
-            'index.php',
-            'dashboard1.php',
-            'menu.php',
-            'home.php',
-            'add_admin.php',
-            'addnews.php',
-            'addforum.php',
-            'addpost.php',
-            'addforum.php',
-            'addgame.php',
-            'addblog.php',
-            'admin_detail.php',
-            'profile.php',
-            'addarticle.php',
-            'addfile.php',
-            'addshow.php',
-            'addmember.php',
-            'addstory.php',
-            'addinfo.php',
-            'addcat.php',
-            'productshow.php',
-            'cp.php',
-            'addjob.php',
-            'viewproduct.php',
-            'addaccount.php',
-            'manage.php',
-            'addcontact.php',
-            'order.php',
-            'viewmanager.php',
-            'addschool.php',
-            'addproject.php',
-            'addvideo.php',
-            'addphoto.php',
-            'addsale.php',
-            'addcompany.php',
-            'payment.php',
-            'emp.php',
-            'addmovie.php',
-            'addpassword.php',
-            'students.php',
-            'add_new_students.php',
-            'addemployee.php',
-            'addcat.php',
-            'admin.php',
-            'admincp.php',
-            'settings.php',
-            'addstate.php',
-            'addcountry.php',
-            'addmedia.php',
-            'addcode.php',
-            'addlinks.php',
-            'addcity.php',
-            'product_add.php',
-            'additem.php',
-            'addstore.php',
-            'acceso.php',
-            'account.html',
-            'admloginuser.asp',
-            'add_banner.php',
-            'AdminHome.php',
-            'AdminDashboard.php',
-            'login.asp',
-            'index1.php',
-            'login.php',
-            'banner.php',
-            'admin.asp',
-            'admincontrol.html',
-            'category.php',
-            'admin/control_pages/admin_home.php',
-            'admin_home.php',
-            'admin/dashboard/index.php',
-            'admin/dash.php',
-            'dash.php',
-            'administrator',
-            'account.asp',
-            'list_gallery.php',
-            'pages/home_admin.php',
-            'page_management.php',
-            'overview.php',
-            'viewmembers.php',
-            'add-slider.php',
-            'add-room.php',
-            'admin_login.asp',
-            'adminLogin.html',
-            'admin-login.html',
-            'admin-login.php',
-
-        );
-
-        // Display results
-        echo "<h2>Results for: " . htmlspecialchars($base_url) . "</h2>";
-        echo "<ul>";
-
-        foreach ($admin_pages as $page) {
-            $full_url = $base_url . $page;
-            $headers = @get_headers($full_url);
-
-            if ($headers && strpos($headers[0], '200')) {
-                echo "<li><a href='" . $full_url . "' target='_blank'>" . $full_url . "</a> - Found</li>";
-            } else {
-                echo "<li>" . $full_url . " - Not Found</li>";
-            }
+    <script>
+        function showSpinner() {
+            document.getElementById('spinner').style.display = 'inline-block';
         }
-
-        echo "</ul>";
-    }
-    ?>
+    </script>
 
 </body>
 </html>
-
